[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sudoku/Scripts/HighlightIdenticalDigits.gd" type="Script" id=1]
[ext_resource path="res://Sudoku/Scripts/GoToSettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Sudoku/Scripts/AdvancedSettings.gd" type="Script" id=3]
[ext_resource path="res://Sudoku/Scripts/SelectedCellPreview.gd" type="Script" id=4]
[ext_resource path="res://Sudoku/Scripts/IdenticalCellPreview.gd" type="Script" id=5]

[node name="AdvancedSettings" type="Panel"]
margin_left = -1.0
margin_top = -1.0
margin_right = 1079.0
margin_bottom = 1919.0
script = ExtResource( 3 )

[node name="HighlightIdneticalDigits" type="CheckBox" parent="."]
margin_left = 364.0
margin_top = 133.0
margin_right = 770.0
margin_bottom = 360.0
text = "Highlight Identical Digits"
script = ExtResource( 1 )

[node name="GoToSettingsMenu" type="Button" parent="."]
margin_left = 387.0
margin_top = 1663.0
margin_right = 687.0
margin_bottom = 1776.0
text = "Back"
script = ExtResource( 2 )

[node name="HighlightColorPicker" type="ColorPicker" parent="."]
margin_left = 215.0
margin_top = 500.0
margin_right = 537.0
margin_bottom = 962.0

[node name="SelectedCellPreview" type="Panel" parent="."]
margin_left = 539.0
margin_top = 561.0
margin_right = 579.0
margin_bottom = 601.0
script = ExtResource( 4 )

[node name="IdenticalCellPreview" type="Panel" parent="."]
margin_left = 546.0
margin_top = 496.0
margin_right = 586.0
margin_bottom = 536.0
script = ExtResource( 5 )

[node name="PlayerDigits" type="ColorPicker" parent="."]
margin_left = 213.0
margin_top = 1001.0
margin_right = 521.0
margin_bottom = 1463.0

[node name="GamePlacedDigits" type="ColorPicker" parent="."]
margin_left = 557.0
margin_top = 1007.0
margin_right = 865.0
margin_bottom = 1469.0

[node name="GameGrid" type="ColorPicker" parent="."]
margin_left = 577.0
margin_top = 501.0
margin_right = 885.0
margin_bottom = 963.0
